Task 2 started. Reading train & test files + calculating HOG features done. Decision Tree started, but gives problems:exceeds maximum supported size. Random Forest not started.

--- a/assignment2/tdcv/tdcv.xcodeproj/xcshareddata/xcschemes/tdcv.xcscheme
+++ b/assignment2/tdcv/tdcv.xcodeproj/xcshareddata/xcschemes/tdcv.xcscheme
@@ -36,7 +36,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "/Users/Fernando/Documents/TUM/Sem3/TDCV/tracking-detection-in-cv---ws1920/assignment2/tdcv"
+      customWorkingDirectory = "/Users/Maria/Desktop/TUM/3SEM/Tracking&amp;Detection/Exercises/GitLab/tracking-detection-in-cv---ws1920/assignment2/tdcv"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
